# RisenLab

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-windows.yml
app/: index.html  package-lock.json  package.json  vite-dev-api.ts  vite.config.ts
app/src/: App.tsx  main.tsx  theme.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: logic.rs  main.rs  remote.rs
app/src/components/: DetailPanel.tsx  ErrorLog.tsx  FolderTree.tsx  Model3DViewer.tsx  ScenarioPlayer.tsx  SearchableList.tsx  Sidebar.tsx  SkeletonAnimationViewer.tsx  TextureGrid.tsx  Titlebar.tsx
app/src/lib/: actorOrientation.test.ts  actorOrientation.ts  api.test.ts  api.ts  cache.test.ts  cache.ts  cameraSync.ts  framing.test.ts  framing.ts  i18n.test.ts  i18n.ts  itemScenarios.test.ts  itemScenarios.ts  library.test.ts  library.ts  materials.test.ts  materials.ts  motionCategory.test.ts  motionCategory.ts  normalMap.test.ts  normalMap.ts  remoteToken.ts  roughness.test.ts  roughness.ts  scenarios.test.ts  scenarios.ts  showroomCategorize.test.ts  showroomCategorize.ts  showroomLayout.test.ts  showroomLayout.ts  types.ts  windowControls.ts
app/src/screens/: AiCompare.tsx  Animations.tsx  Dashboard.tsx  Guide.tsx  Inventory.tsx  Library.tsx  Models.tsx  Settings.tsx  Showroom.tsx
docs/: AI.md  ROADMAP.md  p0x-patches.md
docs/formats/: content-layer.md  pak.md  ximg.md
src/: ai.rs  batch.rs  content.rs  dds.rs  gamepath.rs  lib.rs  main.rs  pak.rs  tple.rs  ximg.rs  xmac.rs  xmesh_skin.rs  xmot.rs
tools/: dxt3_encode.py
