[package]
name = "risenlab"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ddsfile = { version = "0.6.0", default-features = false }
texpresso = { version = "2.0.2", default-features = false }
image = { version = "0.25.10", default-features = false, features = ["png"] }
windows-sys = { version = "0.61.2", features = ["Win32_Globalization"] }
eframe = "0.35.0"
rfd = "0.17.2"
