[package]
name = "risenlab"
version = "0.1.6"
edition = "2021"

[dependencies]
flate2 = "1"
# default-features off = no colored help (anstream→windows-sys, unbuildable in the sandbox
# after a cache wipe — see the note below); everything functional stays.
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context", "suggestions"] }
anyhow = "1"
ddsfile = { version = "0.6.0", default-features = false }
texpresso = { version = "2.0.2", default-features = false }
# jpeg/webp: AI providers may return the enhanced image in either format — the pipeline
# itself stays PNG (decoded + re-saved). NOTE deliberately NO Rust HTTP/TLS dependency for
# the AI layer: rustls needs a C compiler (`ring`), and native-tls/schannel pulls a
# windows-sys build that needs binutils (`dlltool`+`as`) — neither exists in the dev
# sandbox. `src/ai.rs` shells out to Windows' own bundled `curl.exe` instead (present since
# Windows 10 1803), the same subprocess pattern already used for `mimicry-helper.exe`.
# NOTE deliberately NO windows-sys / eframe / rfd anymore: after a target-cache wipe those
# chains can't rebuild in the dev sandbox (windows import-lib generation needs binutils'
# dlltool/as). gamepath.rs declares its one kernel32 FFI call manually, and the egui GUI bin
# they served was rejected/dead long ago (the real UI is the Tauri+React app/).
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
