[package]
name = "risenlab-ui"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "risenlab-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
risenlab = { path = "../.." }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rfd = "0.17.2"
